<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_currency_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:layout_marginBottom="32dp">

            <EditText
                android:id="@+id/editAmount"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount_hint"
                android:inputType="numberDecimal"
                android:autofillHints="amount"
                android:textColor="#000000"
                android:textColorHint="#666666"
                android:background="@drawable/ic_rounded_bar_background"
                android:padding="12dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textCurrencyFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/from_label"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="32dp"
            android:background="@android:drawable/btn_dropdown" />

        <ImageView
            android:id="@+id/btnSwap"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_swap_currencies"
            android:contentDescription="@string/swap_currencies_desc"
            android:rotation="90"
            android:alpha="0.7"
            android:layout_marginBottom="32dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/to_label"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="32dp"
            android:background="@android:drawable/btn_dropdown" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConvert"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:text="@string/convert_button"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/google_yellow"
            app:cornerRadius="16dp"
            android:padding="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="36dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_label"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/textCurrencyTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/editConvertedAmount"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:hint="@string/converted_amount_hint"
            android:enabled="false"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:background="@drawable/ic_rounded_bar_background" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />

    </LinearLayout>
</ScrollView>
